<resources>
    <string name="app_name">BraPro</string>
    <string name="ConsultaItemsMenu">http://201.24.26.23/brapro/wsSegurancaBraPro/api/Seguranca/ConsultaItemsMenu</string>
    <string name="Login">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/Login</string>
    <string name="ConsultaSectores">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaSectores</string>
    <string name="ConsultaCosechas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaCosechas</string>
    <string name="ManutencaoCosechas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoCosechas</string>
    <string name="ConsultaCultivos">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaCultivos</string>
    <string name="ConsultaCultivosDetalle">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaCultivosDetalle</string>
    <string name="ManutencaoCultivos">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoCultivos</string>
    <string name="ConsultaPlagas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaPlagas</string>
    <string name="ConsultaCotacoes">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaCotacoes</string>
    <string name="ConsultaClientes">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaClientes</string>
    <string name="ManutencaoClientes">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoClientes</string>
    <string name="ConsultaMaquinarias">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaMaquinarias</string>
    <string name="ManutencaoMaquinarias">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoMaquinarias</string>
    <string name="ConsultaEmpleados">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaEmpleados</string>
    <string name="ManutencaoEmpleados">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoEmpleados</string>
    <string name="ConsultaAlertaPlagas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaAlertaPlagas</string>
    <string name="ManutencaoAlertaPlagas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoAlertaPlagas</string>
    <string name="ConsultaVisitas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaVisitas</string>
    <string name="ManutencaoVisitas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoVisitas</string>
    <string name="ConsultaNegociacoes">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaNegociacoes</string>
    <string name="ManutencaoNegociacoes">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoNegociacoes</string>
    <string name="ConsultaProducto">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaProducto</string>
    <string name="ConsultaTipoProducto">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTipoProducto</string>
    <string name="ConsultaTaxas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTaxas</string>
    <string name="ConsultaPrecos">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaPrecos</string>
    <string name="ManutencaoProductos">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoProductos</string>
    <string name="ConsultaPremios">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaPremios</string>
    <string name="ManutencaoPremios">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoPremios</string>
    <string name="ManutencaoDespesas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoDespesas</string>
    <string name="ConsultaDespesas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaDespesas</string>
    <string name="ManutencaoMensagems">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoMensagems</string>
    <string name="ConsultaMensagens">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaMensagens</string>
    <string name="ManutencaoPontoInteresse">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoPontoInteresse</string>
    <string name="ConsultaPontosInteresse">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaPontosInteresse</string>
    <string name="ManutencaoTareas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoTareas</string>
    <string name="ConsultaTareas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTareas</string>
    <string name="ConsultaTipoTarea">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTipoTarea</string>
    <string name="ConsultaBalance">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaBalance</string>
    <string name="ConsultaMenu">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaMenu</string>
    <string name="ConsultaTipoContrato">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTipoContrato</string>
    <string name="ConsultaTipoDespesa">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTipoDespesa</string>
    <string name="ConsultaTipoDespesaTempo">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaTipoDespesaTempo</string>
    <string name="ConsultaLotegado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaLotegado</string>
    <string name="ManutencaoLotegado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoLotegado</string>
    <string name="ConsultaGado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaGado</string>
    <string name="ManutencaoGado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoGado</string>
    <string name="ConsultaHistorialConsumo">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaHistorialConsumo</string>
    <string name="ManutencaoHistorialConsumo">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoHistorialConsumo</string>
    <string name="ConsultaHistorialEngorde">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaHistorialEngorde</string>
    <string name="ManutencaoHistorialEngorde">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoHistorialEngorde</string>
    <string name="ConsultaHistorialLeche">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaHistorialLeche</string>
    <string name="ManutencaoHistorialLeche">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoHistorialLeche</string>
    <string name="ConsultaVentaGado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaVentaGado</string>
    <string name="ManutencaoVentaGado">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoVentaGado</string>
    <string name="ConsultaSolo">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaSolo</string>
    <string name="ManutencaoSolo">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoSolo</string>
    <string name="ManutencaoSolo2">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoSolo2</string>
    <string name="ConsultaCoordenadas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaCoordenadas</string>
    <string name="ManutencaoSectores_Coordenadas">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoSectores_Coordenadas</string>
    <string name="ManutencaoSector">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoSector</string>
    <string name="ManutencaoRegistro">http://201.24.26.23/brapro/wsSegurancaBraPro/api/Seguranca/ManutencaoRegistro</string>
    <string name="ManutencaoAlterarSenha">http://201.24.26.23/brapro/wsSegurancaBraPro/api/Seguranca/ManutencaoAlterarSenha</string>
    <string name="ConsultaUsers">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaUsers</string>
    <string name="ConsultaUsuarioAtivar">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ConsultaUsuarioAtivar</string>
    <string name="ManutencaoUsuarioAtivar">http://201.24.26.23/brapro/wsSiteBraPro/api/Site/ManutencaoUsuarioAtivar</string>
    <string name="sector_item">Setor</string>
    <string name="cultivo_item">Safra</string>
    <string name="cosecha_item">Colheita</string>
    <string name="plaga_item">Praga</string>
    <string name="cotacoe_item">Cotacoe</string>
    <string name="cliente_item">Cliente</string>
    <string name="maquinaria_item">Maquinaria</string>
    <string name="empleado_item">Empregado</string>
    <string name="alertaplaga_item">Alerta praga</string>
    <string name="stringlogin">Login</string>
    <string name="stringSenha">Senha</string>
    <string name="btextlogin">Login</string>
    <string name="btextlogoff">Logoff</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="action_search">Pesquisa</string>
    <string name="action_new">Novo</string>
    <string name="action_settings">Atualizar</string>
    <string name="tvlista">Lista</string>
    <string name="tvwebview">webview</string>
    <string name="textoCosecha">Colheita</string>
    <string name="NuevaCosecha">Nova colheita</string>
    <string name="salvar">Salvar</string>
    <string name="NuevoCultivo">Nova safra</string>
    <string name="tx_sector">Setor</string>
    <string name="tx_inicio">Data de inicio</string>
    <string name="tx_fim">Data fim</string>
    <string name="tx_cosecha">Colheita</string>
    <string name="NovoCliente">Novo cliente</string>
    <string name="tx_nombre">Nome</string>
    <string name="tx_organizacion">Organizacion</string>
    <string name="tx_numero">Número</string>
    <string name="tx_direccion">Endereço</string>
    <string name="tx_Area">Area</string>
    <string name="tx_Cliente">Cliente Info</string>
    <string name="tx_NovoEmpleado">Novo empregado</string>
    <string name="tx_fecha_contratacion">Data de contratação</string>
    <string name="tx_edad">Edad</string>
    <string name="tx_rol">Rol</string>
    <string name="tx_Empleado">Empregado Info</string>
    <string name="tx_NovoMaquinaria">Nova maquinaria</string>
    <string name="tx_registro">Registro</string>
    <string name="tx_fecha_adquisicion">Data de aquisição</string>
    <string name="tx_precio">Preco</string>
    <string name="tx_tipo">Tipo</string>
    <string name="tx_descripcion">Descrição</string>
    <string name="tx_modelo">Modelo</string>
    <string name="tx_Maquinaria_Info">Maquinaria Info</string>
    <string name="tx_Cotacoe_info">Cotacoe Info</string>
    <string name="tx_novo_alertaplaga">Novo alerta de praga</string>
    <string name="tx_plaga">Praga</string>
    <string name="tx_fecha">Data</string>
    <string name="tx_estado">Estado</string>
    <string name="tx_imagen">Imagen</string>
    <string name="tx_alertaplaga">Alerta da pragas Info</string>
    <string name="tx_visitas">Visitas</string>
    <string name="tx_motivo">Razão</string>
    <string name="tx_obs">Obs</string>
    <string name="tx_situcao">Situcao</string>
    <string name="tx_negociacoes">Negociacoes</string>
    <string name="tx_cpf">Cpf do Produtor</string>
    <string name="tx_nome_productor">Nome do produtor</string>
    <string name="tx_tipo_do_local">Tipo do local</string>
    <string name="tx_local">Local</string>
    <string name="tx_producto">Produto</string>
    <string name="tx_taxa_do_dolar">Taxa do dolars</string>
    <string name="tx_valor_negociaco">Valor da negociacao</string>
    <string name="tx_dato_pagamento">Dato de pagamento</string>
    <string name="tx_tipo_producto">Tipo de produto</string>
    <string name="tx_fecha_registro">Data de registro</string>
    <string name="tx_fecha_expiracion">Data de expiração</string>
    <string name="tx_funcion">Função</string>
    <string name="tx_composicion">Composição</string>
    <string name="tx_objeto">Objeto</string>
    <string name="tx_despesas">Despesas</string>
    <string name="tx_data_despesa">Data de despesa</string>
    <string name="tx_custo_mantenimento">Custo de manutenção</string>
    <string name="tx_vida_util">Vida util / horas </string>
    <string name="tx_vida_util_ano">Vida util / ano</string>
    <string name="tx_tipo_adquisicion">Tipo de adquisicao</string>
    <string name="tx_potencia_maquinaria">Potência da máquina</string>
    <string name="cpf">Cpf</string>
</resources>