<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/NovoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:layout_marginBottom="50dp"
                tools:text="@string/NovoCliente" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_cpf"
                tools:text="@string/cpf"
                android:text="@string/cpf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_form_cliente_cpf"/>


            <TextView
                android:text="@string/tx_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_nome"
                tools:text="@string/tx_nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_cliente_nome"/>

            <TextView
                android:text="@string/tx_organizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_org"
                tools:text="@string/tx_organizacion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_cliente_org"/>

            <TextView
                android:text="@string/tx_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_direccion"
                tools:text="@string/tx_direccion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_cliente_direccion"/>

            <TextView
                android:text="@string/tx_Area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_area"
                tools:text="@string/tx_Area" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_cliente_area"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_cliente_numero"
                tools:text="@string/tx_numero"
                android:text="@string/tx_numero" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/edittext_style"
                android:id="@+id/et_form_cliente_numero"/>

            <Button
                android:layout_marginTop="5dp"
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_salvar_cliente"
                android:textColor="@color/white"
                android:background="@drawable/button_style2"
                tools:text="@string/salvar" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>