<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tx_negociacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:layout_marginBottom="50dp"
                tools:text="@string/tx_negociacoes" />

            <TextView
                android:text="@string/tx_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_cpf"
                tools:text="@string/tx_cpf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_negociacoes_cpf"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:text="@string/tx_nome_productor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_nomeproductor"
                tools:text="@string/tx_nome_productor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_form_negociacoes_nomeproductor"/>

            <TextView
                android:text="@string/tx_tipo_do_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_tipodolocal"
                tools:text="@string/tx_tipo_do_local"
                android:layout_marginBottom="5dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:id="@+id/rg_form_negociacoes_tipodolocal"
                android:layout_alignParentRight="true">>

                <RadioButton
                    android:text="Entrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_tipolocal_Entrega"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="Retirada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_tipolocal_Retirada"
                    android:layout_weight="1" />

            </RadioGroup>



            <TextView
                android:text="@string/tx_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_local"
                tools:text="@string/tx_local" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_form_negociacoes_local"
                android:inputType="text" />

            <TextView
                android:text="@string/tx_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_producto"
                tools:text="@string/tx_producto" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_form_negociacoes_producto"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:text="@string/tx_taxa_do_dolar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_taxa"
                tools:text="@string/tx_taxa_do_dolar" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_form_negociacoes_taxa"/>

            <TextView
                android:text="@string/tx_valor_negociaco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_valornegocia"
                tools:text="@string/tx_valor_negociaco" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_form_negociacoes_valornegocia"/>


            <TextView
                android:text="@string/tx_dato_pagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_form_negociacoes_fecha"
                tools:text="@string/tx_dato_pagamento" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:textIsSelectable="true"
                android:id="@+id/et_form_negociacoes_fecha"/>

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_style2"
                android:id="@+id/bt_salvar_negociacoes"
                tools:text="@string/salvar" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>