<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:text="@string/NuevaCosecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAlignment="center"
        tools:text="@string/NuevaCosecha"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:text="@string/textoCosecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        tools:text="@string/textoCosecha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_cosecha_nome"/>

    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_style2"
        android:id="@+id/bt_salvar_cosecha"
        tools:text="@string/salvar" />

</LinearLayout>